--- a/index.html
+++ b/index.html
@@ -218,20 +218,12 @@
       <h3>Box 1</h3>
       Aenean rutrum ipsum eget enim tincidunt sodales. Maecenas in urna non sapien sagittis ornare. 
       Etiam laoreet, neque in aliquet tempus, felis lorem consequat velit, et ornare mi ex eget turpis. 
-      Vivamus id scelerisque eros, in ultricies nisi. 
-      Vestibulum tempus dapibus vestibulum. Suspendisse euismod dui non felis molestie eleifend. 
-      Suspendisse faucibus blandit laoreet. Cras rhoncus quis leo sed tempor. 
-      Vivamus sed diam sit amet tortor elementum suscipit.
     </div>
 
     <div class="box2">
      <h3>Box 2</h3> 
      Aenean rutrum ipsum eget enim tincidunt sodales. Maecenas in urna non sapien sagittis ornare. 
      Etiam laoreet, neque in aliquet tempus, felis lorem consequat velit, et ornare mi ex eget turpis. 
-     Vivamus id scelerisque eros, in ultricies nisi. 
-     Vestibulum tempus dapibus vestibulum. Suspendisse euismod dui non felis molestie eleifend. 
-     Suspendisse faucibus blandit laoreet. Cras rhoncus quis leo sed tempor. 
-     Vivamus sed diam sit amet tortor elementum suscipit.
     </div>
 
 
@@ -239,10 +231,6 @@
       <h3>Box 3</h3>
       Aenean rutrum ipsum eget enim tincidunt sodales. Maecenas in urna non sapien sagittis ornare. 
       Etiam laoreet, neque in aliquet tempus, felis lorem consequat velit, et ornare mi ex eget turpis. 
-      Vivamus id scelerisque eros, in ultricies nisi. 
-      Vestibulum tempus dapibus vestibulum. Suspendisse euismod dui non felis molestie eleifend. 
-      Suspendisse faucibus blandit laoreet. Cras rhoncus quis leo sed tempor. 
-      Vivamus sed diam sit amet tortor elementum suscipit.
     </div>
 
 
@@ -250,10 +238,7 @@
       <h3>Box 4</h3>
       Aenean rutrum ipsum eget enim tincidunt sodales. Maecenas in urna non sapien sagittis ornare. 
       Etiam laoreet, neque in aliquet tempus, felis lorem consequat velit, et ornare mi ex eget turpis. 
-      Vivamus id scelerisque eros, in ultricies nisi. 
-      Vestibulum tempus dapibus vestibulum. Suspendisse euismod dui non felis molestie eleifend. 
-      Suspendisse faucibus blandit laoreet. Cras rhoncus quis leo sed tempor. 
-      Vivamus sed diam sit amet tortor elementum suscipit.</div>
+</div>
 
 
 
